@@ -6,13 +6,13 @@ import com.faforever.client.api.dto.AchievementType;
 import com.faforever.client.api.dto.Clan;
 import com.faforever.client.api.dto.CoopMission;
 import com.faforever.client.api.dto.CoopResult;
-import com.faforever.client.api.dto.DivisionLeaderboardEntry;
 import com.faforever.client.api.dto.FeaturedModFile;
 import com.faforever.client.api.dto.Game;
 import com.faforever.client.api.dto.GameReview;
 import com.faforever.client.api.dto.Leaderboard;
 import com.faforever.client.api.dto.LeaderboardEntry;
 import com.faforever.client.api.dto.LeaderboardRatingJournal;
+import com.faforever.client.api.dto.LeagueLeaderboardEntry;
 import com.faforever.client.api.dto.Map;
 import com.faforever.client.api.dto.MapVersion;
 import com.faforever.client.api.dto.MapVersionReview;
@@ -144,12 +144,12 @@ public class MockFafApiAccessor implements FafApiAccessor {
   }
 
   @Override
-  public List<DivisionLeaderboardEntry> getDivisionLeaderboard(Division division) {
-    return Collections.emptyList();
+  public List<LeagueLeaderboardEntry> getLeagueLeaderboard(Division division) {
+    return List.of();
   }
 
   @Override
-  public DivisionLeaderboardEntry getLeagueEntryForPlayer(int playerId, String league) {
+  public LeagueLeaderboardEntry getLeagueEntryForPlayer(int playerId, String league) {
     return null;
   }
 
